examples/test/testpolicy11881.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11881
  namespace: namespace216
spec:
  podSelector:
    matchLabels:
      key7: value18
      key12: value48
      key14: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value38
          key14: value45
          key19: value14
      podSelector:
        matchLabels:
          key29: value3
          key35: value13
          key7: value8
